USER FUNCTIONALITY, LOGIN/LOGOUT

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,10 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 
+.giffygram{
+    margin-bottom: 3.8em;
+}
+
 .highlight {
     border-color: purple;
 }
